--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -9,12 +9,12 @@ running.
     An application's environment is the collection of all resources external to the application with which the
     application communicates.  These external resources can be thought of as an implicit input to the program as their
     presence and contents alter the flow of any application executed in their presence.  This work is concerned with
-    bugs that arise from subtle differences in behavior between executions in one environment versus
-    another. Specifically, the files and network communications visible through the monitoring the system calls the
-    application makes during the course of its execution.  Consider the following hypothetical example: an application
-    utilizing the POSIX API is executed on a Linux machine and an OS X machine.  Because the API's called in each
-    situation superficially act the same, a developer might make the assumption that they are identical in all regards
-    -- an assumption that will result in bugs when in cases where it does not hold.
+    bugs that arise from subtle differences in behavior between executions in one environment versus another
+    specifically, the files and network communications visible through the monitoring the system calls the application
+    makes during the course of its execution.  Consider the following hypothetical example: an application utilizing the
+    POSIX API is executed on a Linux machine and an OS X machine.  Because the API's called in each situation
+    superficially act the same, a developer might make the assumption that they are identical in all regards -- an
+    assumption that will result in bugs when in cases where it does not hold.
 
     Another interesting case is the situation where the actual API's in question work correctly but the resources they
     operate on do not.  Consider the case where an application is executed on two different hosts with the same
